--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,26 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  gh-pages-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Install Deps
-        run: npm install
-
-      # Runs a single command using the runners shell
-      - name: Run deploy
-        run: npm run deploy
+      - name: Setup Node.js for use with actions
+        uses: actions/setup-node@1.1.0
+        with:
+          version: 15.x
+      - name: Checkout branch
+        uses: actions/checkout@v2
+        
+      - name: Clean install deps
+        run: npm ci
+      
+      - name: Run deploy script
+        env:
+          GITHUB_USERNAME: ${{ secrets.USER_NAME }}
+          GITHUB_EMAIL: ${{ secrets.EMAIL }}
+        run: |
+          git config user.name "$env:GITHUB_USERNAME" && git config user.email "$env:GITHUB_EMAIL"
+          npm run deploy
