--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Setup Node.js for use with actions
-        uses: actions/setup-node@1.1.0
+        uses: actions/setup-node@v2.1.4
         with:
           version: 15.x
       - name: Checkout branch
