--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node.js for use with actions
         uses: actions/setup-node@v2.1.4
         with:
-          version: 15.x
+          node-version: 15.x
       - name: Checkout branch
         uses: actions/checkout@v2
         
