--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@chakra-ui/react": "^1.1.5",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "framer-motion": "^3.3.0",
+    "gsap": "^3.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
